--- a/.dev/assets/shared/css/coblocks/hero.css
+++ b/.dev/assets/shared/css/coblocks/hero.css
@@ -7,6 +7,7 @@
 	}
 
 	& .wp-block-coblocks-buttons {
+		margin-bottom: 0 !important;
 		margin-top: 2rem;
 	}
 }
@@ -32,4 +33,3 @@
 	margin-right: 0;
 	width: inherit;
 }
-
