--- a/.dev/assets/shared/css/header/site-navigation__toggle.css
+++ b/.dev/assets/shared/css/header/site-navigation__toggle.css
@@ -35,7 +35,12 @@
 .site-navigation__toggle-icon {
 	align-items: center;
 	display: flex;
-	height: var(--theme-site-nav-toggle--size);
+	height: 100%;
 	justify-content: center;
-	width: var(--theme-site-nav-toggle--size);
+	width: 100%;
+
+	& svg {
+		height: var(--theme-site-nav-toggle--size);
+		width: var(--theme-site-nav-toggle--size);
+	}
 }
