--- a/.dev/assets/shared/css/layout/content.css
+++ b/.dev/assets/shared/css/layout/content.css
@@ -119,10 +119,13 @@ body.home {
 		& .coblocks-form,
 		& .wp-block-button,
 		& .wp-block-separator,
-		& .wp-block-coblocks-buttons,
 		& .wp-block-coblocks-dynamic-separator,
 		& .wp-block-pullquote:not(.is-style-solid-color):not(.alignleft):not(.alignright) {
 			margin-bottom: calc(var(--vertical-rhythm--med) * 1.5) !important;
+			margin-top: calc(var(--vertical-rhythm--med) * 1.15) !important;
+		}
+
+		& .wp-block-coblocks-buttons {
 			margin-top: calc(var(--vertical-rhythm--med) * 1.15) !important;
 		}
 	}
